# banco-base-proyecto-test

./: README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: best_model.h5  data-collection-notebook.ipynb  feature-engineering-notebook.ipynb  modelo-predictivo-LSTM-notebook.ipynb  processed_data.csv
notebooks/data/processed/: correlation_matrix_2024-11-10.csv  correlation_matrix_2024-11-11.csv  correlation_matrix_2024-11-12.csv  fx_rates_2024-11-10.csv  fx_rates_2024-11-11.csv  fx_rates_2024-11-12.csv  news_2024-11-10.csv  news_2024-11-11.csv  news_2024-11-12.csv  statistical_features_2024-11-12.csv  stocks_2024-11-10.csv  stocks_2024-11-11.csv  stocks_2024-11-12.csv  technical_features_2024-11-12.csv
notebooks/data/processed/features/: sentiment_features_2024-11-12.csv
notebooks/data/processed/models/: model_metrics_2024-11-12.csv  training_history_2024-11-12.csv
src/data/: __init__.py  collectors.py  processors.py
src/utils/: analysis_utils.py  feature_engineering.py  model_engineering.py
tests/: test_collector.py
